Неделя 4. Мелкие правки

--- a/css/blocks/form.css
+++ b/css/blocks/form.css
@@ -4,7 +4,7 @@
 
 .form__row {
   display: flex;
-  margin-bottom: 28px;
+  margin-bottom: 29px;
 }
 
 .form__input {
@@ -12,7 +12,7 @@
   border: none;
   border-radius: 4px;
   background: #fff;
-  padding: 17px 30px;
+  padding: 16px 30px;
   font-size: 18px;
   color: #202123;
   line-height: 30px;
@@ -43,6 +43,7 @@
 .form__input_textarea {
   height: 232px;
   resize: none;
+  padding-top: 22px;
 }
 
 .form__controls {
