--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 @import url("./blocks/single-news.css");
 @import url("./blocks/paginator.css");
 @import url("./blocks/about.css");
+@import url("./blocks/footer-container.css");
 @import url("./blocks/footer.css");
 @import url("./blocks/socials.css");
 @import url("./blocks/page-line.css");
