--- a/css/blocks/review.css
+++ b/css/blocks/review.css
@@ -12,26 +12,37 @@
 }
 
 .review__user {
+  display: flex;
+}
+
+.review__username {
   text-decoration: none;
   display: flex;
   align-items: center;
   font-size: 24px;
   font-weight: bold;
   color: #202123;
-  margin-right: 5px;
+  margin-right: 7px;
   margin-bottom: 15px;
+  border-bottom: 2px solid transparent;
   transition: .3s;
 }
 
-.review__user:after {
+/* .review__user:after {
   content: url("../../images/icons/socials/vk-colored.png");
   height: 30px;
   margin-left: 7px;
+} */
+
+.review__username:hover {
+  color: #4d76a1;
+  border-bottom-color: #4d76a1;
 }
 
-.review__user:hover {
-  color: #4d76a1;
-  text-decoration: underline;
+.review__icon-wrapper {
+  width: 30px;
+  height: 30px;
+  margin-top: 4px;
 }
 
 .review__tags {
