--- a/css/blocks/menu.css
+++ b/css/blocks/menu.css
@@ -18,7 +18,7 @@
 .menu__link {
   font-size: 14px;
   text-decoration: none;
-  transition: .3s;
+  transition: color.3s;
 }
 
 .menu__link:hover {
