--- a/css/layout/fonts.css
+++ b/css/layout/fonts.css
@@ -4,6 +4,7 @@
     url('/fonts/opensans-bold-webfont.woff') format('woff');
   font-weight: bold;
   font-style: normal;
+  font-display: block;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
     url('/fonts/opensans-regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: block;
 }
 
 @font-face {
@@ -20,4 +22,5 @@
     url('/fonts/opensans-semibold-webfont.woff') format('woff');
   font-weight: 600;
   font-style: normal;
+  font-display: block;
 }
